2023 day 2024 consistent variable names

--- a/2023/day24.ipynb
+++ b/2023/day24.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "year = 2023\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -38,13 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "[291493672529314, 259618209733833, 379287136024123, -9, 119, -272]"
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,23 +77,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "def solve_lines(left, right):\n",
-    "    a, b, c, d = left[3], left[0], right[3], right[0]\n",
-    "    e, f, g, h = left[4], left[1], right[4], right[1]\n",
+    "    a1, b1, c1, d1, = left[3], left[0], left[4], left[1]\n",
+    "    a2, b2, c2, d2, = right[3], right[0], right[4], right[1]\n",
     "    try:\n",
-    "        t2 = (a * (h - f) + e * (b - d)) / (c * e - g * a)\n",
-    "        t1 = (t2 * c + d - b) / a\n",
+    "        t2 = (a1 * (d2 - d1) + c1 * (b1 - b2)) / (a2 * c1 - c2 * a1)\n",
+    "        t1 = (t2 * a2 + b2 - b1) / a1\n",
     "    except ZeroDivisionError:\n",
     "        # parallel lines\n",
     "        return None, None, None, None\n",
     "\n",
-    "    xl = t1 * a + b\n",
-    "    xb = t2 * c + d\n",
-    "    yl = t1 * e + f\n",
-    "    yb = t2 * g + h\n",
+    "    xl = t1 * a1 + b1\n",
+    "    xb = t2 * a2 + b2\n",
+    "    yl = t1 * c1 + d1\n",
+    "    yb = t2 * c2 + d2\n",
     "\n",
     "    return xl, yl, t1, t2"
    ],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "def check(l, r):\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "outputs": [
     {
      "name": "stdout",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "from sympy import solve, Symbol\n",
@@ -161,26 +161,26 @@
     "e2 = Symbol(\"e2\")\n",
     "f2 = Symbol(\"f2\")\n",
     "\n",
-    "alpha = Symbol(\"alpha\")\n",
-    "beta = Symbol(\"beta\")\n",
-    "upsilon = Symbol(\"upsilon\")\n",
-    "delta = Symbol(\"delta\")\n",
-    "gamma = Symbol(\"gamma\")\n",
-    "epsilon = Symbol(\"epsilon\")\n",
+    "rock_vx = Symbol(\"rock_vx\")\n",
+    "rock_vy = Symbol(\"rock_vy\")\n",
+    "rock_x = Symbol(\"rock_x\")\n",
+    "rock_y = Symbol(\"rock_y\")\n",
+    "rock_vz = Symbol(\"rock_vz\")\n",
+    "rock_z = Symbol(\"rock_z\")\n",
     "\n",
-    "sol = solve([a1 * t1 + c1 - (alpha * t1 + upsilon),\n",
-    "             b1 * t1 + d1 - (beta * t1 + delta),\n",
-    "             a2 * t2 + c2 - (alpha * t2 + upsilon),\n",
-    "             b2 * t2 + d2 - (beta * t2 + delta)],\n",
+    "sol = solve([a1 * t1 + b1 - (rock_vx * t1 + rock_x),\n",
+    "             c1 * t1 + d1 - (rock_vy * t1 + rock_y),\n",
+    "             a2 * t2 + b2 - (rock_vx * t2 + rock_x),\n",
+    "             c2 * t2 + d2 - (rock_vy * t2 + rock_y)],\n",
     "            [t1,\n",
     "             t2,\n",
-    "             delta,\n",
-    "             upsilon])\n",
+    "             rock_y,\n",
+    "             rock_x])\n",
     "\n",
-    "compute_delta = lambdify([a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta], sol[delta])\n",
-    "compute_upsilon = lambdify([a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta], sol[upsilon])\n",
-    "compute_t1 = lambdify([a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta], sol[t1])\n",
-    "compute_t2 = lambdify([a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta], sol[t2])"
+    "compute_rock_y = lambdify([a1, b1, c1, d1, a2, b2, c2, d2, rock_vx, rock_vy], sol[rock_y])\n",
+    "compute_rock_x = lambdify([a1, b1, c1, d1, a2, b2, c2, d2, rock_vx, rock_vy], sol[rock_x])\n",
+    "compute_t1 = lambdify([a1, b1, c1, d1, a2, b2, c2, d2, rock_vx, rock_vy], sol[t1])\n",
+    "compute_t2 = lambdify([a1, b1, c1, d1, a2, b2, c2, d2, rock_vx, rock_vy], sol[t2])"
    ],
    "metadata": {
     "collapsed": false
@@ -188,19 +188,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "outputs": [],
    "source": [
-    "sol2 = solve([a1 * t1 + c1 - (alpha * t1 + upsilon),\n",
-    "             b1 * t1 + d1 - (beta * t1 + delta),\n",
-    "             e1 * t1 + f1 - (gamma * t1 + epsilon),\n",
-    "             a2 * t2 + c2 - (alpha * t2 + upsilon),\n",
-    "             b2 * t2 + d2 - (beta * t2 + delta),\n",
-    "             e2 * t2 + f2 - (gamma * t2 + epsilon)\n",
+    "sol2 = solve([a1 * t1 + b1 - (rock_vx * t1 + rock_x),\n",
+    "             c1 * t1 + d1 - (rock_vy * t1 + rock_y),\n",
+    "             e1 * t1 + f1 - (rock_vz * t1 + rock_z),\n",
+    "             a2 * t2 + d2 - (rock_vx * t2 + rock_x),\n",
+    "             c2 * t2 + d2 - (rock_vy * t2 + rock_y),\n",
+    "             e2 * t2 + f2 - (rock_vz * t2 + rock_z)\n",
     "             ],\n",
-    "            [gamma, epsilon])\n",
-    "compute_gamma = lambdify([e1, f1, e2, f2, t1, t2], sol2[gamma])\n",
-    "compute_epsilon = lambdify([e1, f1, e2, f2, t1, t2], sol2[epsilon])"
+    "            [rock_vz, rock_z])\n",
+    "compute_rock_vz = lambdify([e1, f1, e2, f2, t1, t2], sol2[rock_vz])\n",
+    "compute_rock_z = lambdify([e1, f1, e2, f2, t1, t2], sol2[rock_z])"
    ],
    "metadata": {
     "collapsed": false
@@ -208,56 +208,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alpha: -193, beta: -230 upsilon: 370994826025810 delta: 410411158485339 t1: 805572857023.0 t2: 694955151546.0 gamma: 218 epsilon: 167572107691063\n"
+      "rock_vx: -193, rock_vy: -230 rock_x: 370994826025810 rock_y: 410411158485339 rock_vz: 218 rock_z: 167572107691063\n"
      ]
     }
    ],
    "source": [
     "from itertools import product\n",
     "SEARCH_RANGE = 300\n",
-    "for alpha, beta in product(range(-SEARCH_RANGE, SEARCH_RANGE), range(-SEARCH_RANGE, SEARCH_RANGE)):\n",
-    "    # for beta in :\n",
-    "\n",
-    "    deltas = []\n",
-    "    upsilons = []\n",
-    "\n",
+    "for rock_vx, rock_vy in product(range(-SEARCH_RANGE, SEARCH_RANGE), range(-SEARCH_RANGE, SEARCH_RANGE)):\n",
+    "    rock_ys = []\n",
+    "    rock_xs = []\n",
     "    N = 3\n",
-    "\n",
     "    for i in range(N):\n",
-    "\n",
     "        l, r = data[i], data[i + 1]\n",
-    "        a1, b1, c1, d1, e1, f1 = l[3], l[4], l[0], l[1], l[5], l[2]\n",
-    "        a2, b2, c2, d2, e2, f2 = r[3], r[4], r[0], r[1], r[5], r[2]\n",
+    "        a1, b1, c1, d1, e1, f1 = l[3], l[0], l[4], l[1], l[5], l[2]\n",
+    "        a2, b2, c2, d2, e2, f2 = r[3], r[0], r[4], r[1], r[5], r[2]\n",
     "\n",
     "        try:\n",
-    "            delta = compute_delta(a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta)\n",
-    "            upsilon = compute_upsilon(a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta)\n",
+    "            rock_x = compute_rock_x(a1, b1, c1, d1, a2, b2, c2, d2, rock_vx, rock_vy)\n",
+    "            rock_y = compute_rock_y(a1, b1, c1, d1, a2, b2, c2, d2, rock_vx, rock_vy)\n",
     "        except ZeroDivisionError:\n",
     "            continue\n",
     "\n",
-    "        deltas.append(delta)\n",
-    "        upsilons.append(upsilon)\n",
+    "        rock_ys.append(rock_y)\n",
+    "        rock_xs.append(rock_x)\n",
     "\n",
-    "    if np.ptp(deltas) < 0.001 and np.ptp(upsilons) < 0.001 and len(deltas) == N:\n",
-    "        t1 = compute_t1(a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta)\n",
-    "        t2 = compute_t2(a1, a2, b1, b2, c1, c2, d1, d2, alpha, beta)\n",
+    "    if np.ptp(rock_ys) < 0.001 and np.ptp(rock_xs) < 0.001 and len(rock_ys) == N:\n",
+    "        t1 = compute_t1(a1, b1, c1, d1, a2, b2, c2, d2, rock_vx, rock_vy)\n",
+    "        t2 = compute_t2(a1, b1, c1, d1, a2, b2, c2, d2, rock_vx, rock_vy)\n",
     "\n",
-    "        gamma = compute_gamma(e1, f1, e2, f2, t1, t2)\n",
-    "        epsilon = compute_epsilon(e1, f1, e2, f2, t1, t2)\n",
+    "        rock_vz = compute_rock_vz(e1, f1, e2, f2, t1, t2)\n",
+    "        rock_z = compute_rock_z(e1, f1, e2, f2, t1, t2)\n",
     "\n",
-    "        print(f\"alpha: {alpha}, beta: {beta} upsilon: {int(upsilon)} delta: {int(delta)} t1: {t1} t2: {t2} gamma: {int(gamma)} epsilon: {int(epsilon)}\")\n",
+    "        print(f\"rock_vx: {rock_vx}, rock_vy: {rock_vy} rock_x: {int(rock_x)} rock_y: {int(rock_y)} rock_vz: {int(rock_vz)} rock_z: {int(rock_z)}\")\n",
     "\n",
     "        break\n",
     "else:\n",
     "    print(f\"No solution found\")\n",
     "\n",
-    "answer = int(upsilon + delta + epsilon)"
+    "answer = int(rock_x + rock_y + rock_z)"
    ],
    "metadata": {
     "collapsed": false
@@ -265,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
