--- a/2023/day5.ipynb
+++ b/2023/day5.ipynb
@@ -136,7 +136,7 @@
     "    if a == b:\n",
     "        return [a], []\n",
     "    a1, a2 = a.start, a.stop\n",
-    "    b1, b2 = b.start, b.stop\n",
+    "    bb1, b2 = b.start, b.stop\n",
     "\n",
     "    if b1 > a1:\n",
     "        unmatched.append(range(a1, min(a2,b1)))\n",
