--- a/2024/day20.ipynb
+++ b/2024/day20.ipynb
@@ -171,8 +171,8 @@
    "source": [
     "from itertools import combinations\n",
     "\n",
-    "# we don't need to know the route for the cheat, just the\n",
-    "# difference in path cost between two points and the travel distance\n",
+    "# Realization: the actual route of the cheat doesn't matter, just the\n",
+    "# difference in path cost between two points and the travel distance.\n",
     "# Takes a bit of time but solves both pt1 and pt2\n",
     "cheats = []\n",
     "for a, b in combinations(path_cost.keys(), 2):\n",
