--- a/2024/day16.ipynb
+++ b/2024/day16.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-16T17:26:51.496737Z",
-     "start_time": "2024-12-16T17:26:51.493827Z"
+     "end_time": "2024-12-22T19:14:51.838278Z",
+     "start_time": "2024-12-22T19:14:51.835534Z"
     }
    },
    "cell_type": "code",
@@ -16,8 +16,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-16T17:26:58.436905Z",
-     "start_time": "2024-12-16T17:26:58.423133Z"
+     "end_time": "2024-12-22T19:14:56.383087Z",
+     "start_time": "2024-12-22T19:14:56.374487Z"
     }
    },
    "cell_type": "code",
@@ -34,91 +34,21 @@
     "\n",
     "matrix = parse_single_matrix(data)\n",
     "\n",
-    "# matrix[:5]\n",
-    "\n",
     "start_pos = tuple([int(x) for x in np.array(np.where(matrix == 'S')).flatten()])\n",
     "end_pos = tuple([int(x) for x in np.array(np.where(matrix == 'E')).flatten()])\n",
     "matrix[*start_pos] = '.'\n",
-    "#\n",
     "HEIGHT, WIDTH = matrix.shape\n",
-    "start_dir = (0, 1)\n",
-    "matrix[:5]"
+    "start_dir = (0, 1)"
    ],
    "id": "e10b758f9c8c5fd3",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([['#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#',\n",
-       "        '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#',\n",
-       "        '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#',\n",
-       "        '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#',\n",
-       "        '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#',\n",
-       "        '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#',\n",
-       "        '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#',\n",
-       "        '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#',\n",
-       "        '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#',\n",
-       "        '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#',\n",
-       "        '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#'],\n",
-       "       ['#', '.', '.', '.', '.', '.', '.', '.', '#', '.', '.', '.', '.',\n",
-       "        '.', '.', '.', '.', '.', '#', '.', '.', '.', '.', '.', '.', '.',\n",
-       "        '.', '.', '#', '.', '.', '.', '.', '.', '.', '.', '.', '.', '#',\n",
-       "        '.', '.', '.', '.', '.', '.', '.', '.', '.', '#', '.', '.', '.',\n",
-       "        '#', '.', '.', '.', '.', '.', '#', '.', '.', '.', '.', '.', '.',\n",
-       "        '.', '.', '.', '#', '.', '.', '.', '.', '.', '.', '.', '#', '.',\n",
-       "        '.', '.', '#', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.',\n",
-       "        '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '#', '.',\n",
-       "        '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '#', '.', '.',\n",
-       "        '.', '#', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.',\n",
-       "        '.', '.', '.', '.', '#', '.', '.', '.', '.', 'E', '#'],\n",
-       "       ['#', '.', '#', '.', '#', '#', '#', '.', '#', '#', '#', '.', '#',\n",
-       "        '.', '#', '#', '#', '.', '#', '#', '#', '.', '#', '#', '#', '#',\n",
-       "        '#', '#', '#', '.', '#', '#', '#', '.', '#', '.', '#', '.', '#',\n",
-       "        '.', '#', '.', '#', '#', '#', '#', '#', '#', '#', '.', '#', '.',\n",
-       "        '#', '.', '#', '.', '#', '#', '#', '.', '#', '#', '#', '.', '#',\n",
-       "        '#', '#', '.', '#', '.', '#', '#', '#', '.', '#', '.', '#', '#',\n",
-       "        '#', '.', '#', '.', '#', '#', '#', '.', '#', '#', '#', '#', '#',\n",
-       "        '.', '#', '#', '#', '#', '#', '#', '#', '#', '#', '.', '#', '#',\n",
-       "        '#', '.', '#', '.', '#', '.', '#', '#', '#', '.', '#', '.', '#',\n",
-       "        '.', '#', '.', '#', '#', '#', '.', '#', '#', '#', '#', '#', '#',\n",
-       "        '#', '#', '#', '.', '#', '#', '#', '.', '#', '.', '#'],\n",
-       "       ['#', '.', '#', '.', '.', '.', '#', '.', '.', '.', '.', '.', '#',\n",
-       "        '.', '#', '.', '#', '.', '.', '.', '#', '.', '#', '.', '.', '.',\n",
-       "        '#', '.', '.', '.', '.', '.', '#', '.', '.', '.', '#', '.', '.',\n",
-       "        '.', '#', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.',\n",
-       "        '.', '.', '.', '.', '.', '.', '.', '.', '#', '.', '.', '.', '.',\n",
-       "        '.', '#', '.', '#', '.', '#', '.', '.', '.', '#', '.', '#', '.',\n",
-       "        '.', '.', '#', '.', '.', '.', '#', '.', '.', '.', '.', '.', '#',\n",
-       "        '.', '.', '.', '.', '.', '.', '.', '#', '.', '#', '.', '.', '.',\n",
-       "        '#', '.', '#', '.', '#', '.', '.', '.', '#', '.', '.', '.', '#',\n",
-       "        '.', '#', '.', '#', '.', '#', '.', '#', '.', '.', '.', '.', '.',\n",
-       "        '.', '.', '#', '.', '#', '.', '.', '.', '#', '.', '#'],\n",
-       "       ['#', '.', '#', '#', '#', '.', '#', '#', '#', '#', '#', '.', '#',\n",
-       "        '.', '#', '.', '#', '#', '#', '.', '#', '.', '#', '.', '#', '.',\n",
-       "        '#', '.', '#', '.', '#', '#', '#', '#', '#', '.', '#', '#', '#',\n",
-       "        '#', '#', '#', '#', '.', '#', '.', '#', '.', '#', '.', '#', '.',\n",
-       "        '#', '.', '#', '.', '#', '.', '#', '#', '#', '#', '#', '.', '#',\n",
-       "        '.', '#', '.', '#', '.', '#', '.', '#', '.', '#', '.', '#', '.',\n",
-       "        '#', '.', '#', '#', '#', '.', '#', '.', '#', '#', '#', '#', '#',\n",
-       "        '#', '#', '#', '#', '#', '#', '.', '#', '.', '#', '#', '#', '.',\n",
-       "        '#', '.', '#', '#', '#', '.', '#', '.', '#', '#', '#', '.', '#',\n",
-       "        '#', '#', '.', '#', '.', '#', '.', '#', '#', '#', '.', '#', '#',\n",
-       "        '#', '.', '#', '.', '#', '.', '#', '#', '#', '.', '#']],\n",
-       "      dtype='<U1')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-16T17:27:19.742219Z",
-     "start_time": "2024-12-16T17:27:16.545459Z"
+     "end_time": "2024-12-22T19:15:16.379837Z",
+     "start_time": "2024-12-22T19:15:13.157943Z"
     }
    },
    "cell_type": "code",
@@ -140,7 +70,6 @@
     "print(to_visit)\n",
     "for iteration in range(1_000):\n",
     "    new_to_visit = set()\n",
-    "    # print(len(to_visit))\n",
     "    for pos, dir in to_visit:\n",
     "        pos = tuple(pos)\n",
     "        dir = tuple(dir)\n",
@@ -148,10 +77,8 @@
     "        cost = best_cost[(pos, dir)]\n",
     "        for new_dir in dir_90_deg[dir]+[dir]:\n",
     "            new_pos = (pos[0]+new_dir[0], pos[1]+new_dir[1])\n",
-    "#             print(new_pos, m[new_pos])\n",
     "            if m[new_pos] in \".E\":\n",
     "                new_cost = cost + (1 if dir == new_dir else 1000+1)\n",
-    "#                 print(f\"pos: {pos}, cost: {cost}, new_cost: {new_cost}\")\n",
     "                if new_cost < best_cost[(new_pos, new_dir)]:\n",
     "                    new_to_visit.add((new_pos, new_dir))\n",
     "                    best_cost[(new_pos, new_dir)] = new_cost\n",
@@ -159,14 +86,11 @@
     "        print(\"DONE\")\n",
     "        break\n",
     "    to_visit = list(new_to_visit)\n",
-    "#     print(to_visit)\n",
     "\n",
     "    z = m.copy()\n",
     "    for x in sorted(best_cost.keys()):\n",
     "        pos = x[0]\n",
     "        z[pos] = ' '\n",
-    "\n",
-    "    # print(\"\\n\".join([\"\".join(row) for row in z]))\n",
     "else:\n",
     "    raise ValueError(\"max iterations exceeded\")\n"
    ],
@@ -181,13 +105,13 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-16T17:29:02.383083Z",
-     "start_time": "2024-12-16T17:29:02.377855Z"
+     "end_time": "2024-12-22T19:15:17.775164Z",
+     "start_time": "2024-12-22T19:15:17.768854Z"
     }
    },
    "cell_type": "code",
@@ -208,18 +132,18 @@
        "79404"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-16T17:29:35.421192Z",
-     "start_time": "2024-12-16T17:29:34.760892Z"
+     "end_time": "2024-12-22T19:15:18.558677Z",
+     "start_time": "2024-12-22T19:15:18.553884Z"
     }
    },
    "cell_type": "code",
@@ -234,13 +158,13 @@
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-16T17:29:58.316664Z",
-     "start_time": "2024-12-16T17:29:57.520558Z"
+     "end_time": "2024-12-22T19:15:29.126219Z",
+     "start_time": "2024-12-22T19:15:28.334884Z"
     }
    },
    "cell_type": "code",
@@ -270,10 +194,9 @@
     "        cost = best_cost[(pos, dir)]\n",
     "        for new_dir in dir_90_deg[dir]+[dir]:\n",
     "            new_pos = (pos[0]+new_dir[0], pos[1]+new_dir[1])\n",
-    "            # print(new_pos, m[new_pos])\n",
     "            if m[new_pos] in \".E\":\n",
     "                new_cost = cost + (1 if dir == new_dir else 1000+1)\n",
-    "#                 print(f\"pos: {pos}, cost: {cost}, new_cost: {new_cost}\")\n",
+    "                # special case for equal cost, this means both are valid options and we combine them\n",
     "                if new_cost == best_cost[(new_pos, new_dir)]:\n",
     "                    # combine path lengths together\n",
     "                    best_paths[(new_pos, new_dir)].update(best_paths[(pos, dir)])\n",
@@ -300,13 +223,13 @@
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-16T17:31:25.899107Z",
-     "start_time": "2024-12-16T17:31:25.896166Z"
+     "end_time": "2024-12-22T19:15:30.545252Z",
+     "start_time": "2024-12-22T19:15:30.542963Z"
     }
    },
    "cell_type": "code",
@@ -322,20 +245,33 @@
        "451"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 8
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-22T19:15:37.968940Z",
+     "start_time": "2024-12-22T19:15:37.963270Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "submit(ans2, )",
-   "id": "901e8169fdc59ed0"
+   "source": "submit(ans2, part=\"b\", day=day, year=year)",
+   "id": "901e8169fdc59ed0",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part b already solved with same answer: 451\n"
+     ]
+    }
+   ],
+   "execution_count": 9
   }
  ],
  "metadata": {
