--- a/2024/day18.ipynb
+++ b/2024/day18.ipynb
@@ -3,25 +3,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T05:02:37.101521Z",
-     "start_time": "2024-12-18T05:02:36.947010Z"
+     "end_time": "2024-12-22T19:22:49.714362Z",
+     "start_time": "2024-12-22T19:22:49.711827Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "from networkx.algorithms.tournament import is_reachable\n",
-    "\n",
-    "year = 2024; day = 18"
-   ],
+   "source": "year = 2024; day = 18",
    "id": "14097d859b17d8da",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T05:21:41.483733Z",
-     "start_time": "2024-12-18T05:21:41.472200Z"
+     "end_time": "2024-12-22T19:22:49.969230Z",
+     "start_time": "2024-12-22T19:22:49.718506Z"
     }
    },
    "cell_type": "code",
@@ -52,18 +48,18 @@
        "[(13, 29), (52, 69), (2, 21), (5, 14), (56, 67)]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 46
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T05:23:06.593894Z",
-     "start_time": "2024-12-18T05:23:06.588619Z"
+     "end_time": "2024-12-22T19:22:50.043855Z",
+     "start_time": "2024-12-22T19:22:50.040599Z"
     }
    },
    "cell_type": "code",
@@ -102,13 +98,13 @@
    ],
    "id": "d14b3a12774a9539",
    "outputs": [],
-   "execution_count": 49
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T05:23:07.440945Z",
-     "start_time": "2024-12-18T05:23:07.430955Z"
+     "end_time": "2024-12-22T19:22:50.055890Z",
+     "start_time": "2024-12-22T19:22:50.048852Z"
     }
    },
    "cell_type": "code",
@@ -118,13 +114,13 @@
    ],
    "id": "32e9da519ecf807a",
    "outputs": [],
-   "execution_count": 50
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T05:23:09.373594Z",
-     "start_time": "2024-12-18T05:23:09.001866Z"
+     "end_time": "2024-12-22T19:22:50.095291Z",
+     "start_time": "2024-12-22T19:22:50.061936Z"
     }
    },
    "cell_type": "code",
@@ -139,20 +135,21 @@
      ]
     }
    ],
-   "execution_count": 51
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T05:23:20.816605Z",
-     "start_time": "2024-12-18T05:23:16.429004Z"
+     "end_time": "2024-12-22T19:22:55.945284Z",
+     "start_time": "2024-12-22T19:22:50.101611Z"
     }
    },
    "cell_type": "code",
    "source": [
     "breaking_byte = None\n",
     "for i in range(1024, len(data)):\n",
-    "    if not is_reachable(i):\n",
+    "    cost = search_memory_space_untill(i)\n",
+    "    if not (70,70) in cost:\n",
     "        breaking_byte = i-1\n",
     "        break\n",
     "breaking_byte"
@@ -165,31 +162,31 @@
        "2919"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 52
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T05:23:20.883273Z",
-     "start_time": "2024-12-18T05:23:20.881428Z"
+     "end_time": "2024-12-22T19:22:55.959640Z",
+     "start_time": "2024-12-22T19:22:55.957704Z"
     }
    },
    "cell_type": "code",
    "source": "ans2 = \",\".join(map(str, (data[breaking_byte])))",
    "id": "40c99370dcf33265",
    "outputs": [],
-   "execution_count": 53
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T05:23:20.984248Z",
-     "start_time": "2024-12-18T05:23:20.981550Z"
+     "end_time": "2024-12-22T19:22:55.969142Z",
+     "start_time": "2024-12-22T19:22:55.965840Z"
     }
    },
    "cell_type": "code",
@@ -204,7 +201,7 @@
      ]
     }
    ],
-   "execution_count": 54
+   "execution_count": 8
   }
  ],
  "metadata": {
