2024 - 24 with swaps found

--- a/2024/day24.ipynb
+++ b/2024/day24.ipynb
@@ -305,8 +305,98 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
+   "source": [
+    "to_number = lambda bits:int(\"\".join(map(str, reversed(bits))), 2)\n",
+    "\n",
+    "input_x = to_number([s[f\"x{i:02d}\"] for i in range(45)])\n",
+    "input_y = to_number([s[f\"y{i:02d}\"] for i in range(45)])\n",
+    "output = to_number([s[f\"z{i:02d}\"] for i in range(46)])\n",
+    "\n",
+    "expected = input_x + input_y"
+   ],
+   "id": "c10b0bf1feda1e25"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-24T10:07:15.891716Z",
+     "start_time": "2024-12-24T10:07:15.887704Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def update_circ(pairs, circ):\n",
+    "    new_circ = []\n",
+    "    for instr in circ:\n",
+    "        instr = \",\".join(instr)\n",
+    "        for a1, a2 in pairs:\n",
+    "            instr = instr.replace(a1, \"TMP\")\n",
+    "            instr = instr.replace(a2, a1)\n",
+    "            instr = instr.replace(\"TMP\", a2)\n",
+    "        new_circ.append(tuple(instr.split(\",\")))\n",
+    "    return new_circ\n"
+   ],
+   "id": "7ad9aa15438aa4c7",
+   "outputs": [],
+   "execution_count": 35
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-24T10:09:46.156699Z",
+     "start_time": "2024-12-24T10:09:45.961436Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from itertools import combinations, permutations\n",
+    "count = 0\n",
+    "found = False\n",
+    "for a1, b1, c1, d1 in combinations(to_swap, 4):\n",
+    "    others = to_swap - {a1, b1, c1, d1}\n",
+    "    for a2, b2, c2, d2 in permutations(others, 4):\n",
+    "        count += 1\n",
+    "        pairs = ((a1, a2), (b1, b2), (c1, c2), (d1, d2))\n",
+    "        c = update_circ(pairs, circ)\n",
+    "        s = parse_circuit(state, c)\n",
+    "        output = to_number([s[f\"z{i:02d}\"] for i in range(46)])\n",
+    "        if output == expected:\n",
+    "            print(pairs)\n",
+    "            found = True\n",
+    "        if found:\n",
+    "            break\n",
+    "    if found: break\n",
+    "count"
+   ],
+   "id": "13d9c70d148e12a5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(('z33', 'dqr'), ('vgs', 'z21'), ('dtk', 'pfw'), ('z39', 'shh'))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "865"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 45
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": "",
-   "id": "36f7bf07abc4b8b0"
+   "id": "712dc6b176b19008"
   }
  ],
  "metadata": {
