day part 2 example working

--- a/2025/day2.ipynb
+++ b/2025/day2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 104,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 105,
    "id": "d45953d0",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 106,
    "id": "d5f20409",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "41b5cdec",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
        "17077011375"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,8 +85,8 @@
     "    check_length = len(left) if len(left) % 2 == 0 else len(right)\n",
     "    if check_length % 2 != 0:\n",
     "        continue\n",
-    "    left = left if len(left)%2 == 0 else left.zfill(check_length)\n",
-    "    right = right if len(right)%2 == 0 else \"9\"*check_length\n",
+    "    left = left if len(left)== check_length else left.zfill(check_length)\n",
+    "    right = right if len(right) == check_length else \"9\"*check_length\n",
     "    assert len(left) == len(right)\n",
     "    repeating_part = left[:len(left)//2]\n",
     "   \n",
@@ -98,77 +98,318 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "dcb382ea",
+   "execution_count": 108,
+   "id": "5ce7265e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def try_repeat(rep_str, left, right):\n",
+    "    invalid_ids = set()\n",
+    "    # i = 1\n",
+    "    # test_str = rep_str\n",
+    "    # while len(test_str) <= len(right):\n",
+    "    #     test_str = rep_str*i\n",
+    "    for j in range(1, len(right) // len(rep_str) + 1):\n",
+    "        test_str = rep_str*j\n",
+    "        if int(left) <= int(test_str) <= int(right):\n",
+    "            invalid_ids.add(test_str)\n",
+    "    return invalid_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "9659a72c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'999'"
+       "{'111'}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"9\"*3"
+    "try_repeat(\"1\", \"95\", \"115\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "366cf404",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "----- 636 - 933\n",
+    "6 9\n",
+    "{'666'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "dcb382ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- 78847 - 119454\n",
+      "7 1\n",
+      "{'111111'}\n",
+      "78 11\n",
+      "{'111111'}\n",
+      "788 119\n",
+      "{'119119'}\n",
+      "----- 636 - 933\n",
+      "6 9\n",
+      "{'666'}\n",
+      "----- 7143759788 - 7143793713\n",
+      "7 7\n",
+      "set()\n",
+      "71 71\n",
+      "set()\n",
+      "714 714\n",
+      "set()\n",
+      "7143 7143\n",
+      "set()\n",
+      "71437 71437\n",
+      "{'7143771437'}\n",
+      "----- 9960235 - 10043487\n",
+      "9 1\n",
+      "{'9999999'}\n",
+      "99 10\n",
+      "set()\n",
+      "996 100\n",
+      "set()\n",
+      "9960 1004\n",
+      "{'10041004'}\n",
+      "----- 44480 - 68595\n",
+      "4 6\n",
+      "{'66666'}\n",
+      "44 68\n",
+      "set()\n",
+      "----- 23468 - 43311\n",
+      "2 4\n",
+      "set()\n",
+      "23 43\n",
+      "set()\n",
+      "----- 89 - 123\n",
+      "8 1\n",
+      "{'111'}\n",
+      "----- 785189 - 1014654\n",
+      "7 1\n",
+      "set()\n",
+      "78 10\n",
+      "{'787878'}\n",
+      "785 101\n",
+      "{'785785'}\n",
+      "----- 3829443354 - 3829647366\n",
+      "3 3\n",
+      "set()\n",
+      "38 38\n",
+      "set()\n",
+      "382 382\n",
+      "set()\n",
+      "3829 3829\n",
+      "set()\n",
+      "38294 38296\n",
+      "{'3829638296'}\n",
+      "----- 647009 - 692765\n",
+      "6 6\n",
+      "{'666666'}\n",
+      "64 69\n",
+      "set()\n",
+      "647 692\n",
+      "{'692692', '647647'}\n",
+      "----- 2 - 20\n",
+      "2 2\n",
+      "{'2'}\n",
+      "----- 30 - 42\n",
+      "3 4\n",
+      "{'33'}\n",
+      "----- 120909 - 197026\n",
+      "1 1\n",
+      "set()\n",
+      "12 19\n",
+      "{'191919', '121212'}\n",
+      "120 197\n",
+      "set()\n",
+      "----- 5477469 - 5677783\n",
+      "5 5\n",
+      "{'5555555'}\n",
+      "54 56\n",
+      "set()\n",
+      "547 567\n",
+      "set()\n",
+      "----- 9191900808 - 9191943802\n",
+      "9 9\n",
+      "set()\n",
+      "91 91\n",
+      "{'9191919191'}\n",
+      "919 919\n",
+      "set()\n",
+      "9191 9191\n",
+      "set()\n",
+      "91919 91919\n",
+      "set()\n",
+      "----- 1045643 - 1169377\n",
+      "1 1\n",
+      "{'1111111'}\n",
+      "10 11\n",
+      "set()\n",
+      "104 116\n",
+      "set()\n",
+      "----- 46347154 - 46441299\n",
+      "4 4\n",
+      "set()\n",
+      "46 46\n",
+      "set()\n",
+      "463 464\n",
+      "set()\n",
+      "4634 4644\n",
+      "set()\n",
+      "----- 2349460 - 2379599\n",
+      "2 2\n",
+      "set()\n",
+      "23 23\n",
+      "set()\n",
+      "234 237\n",
+      "set()\n",
+      "----- 719196 - 779497\n",
+      "7 7\n",
+      "{'777777'}\n",
+      "71 77\n",
+      "{'777777'}\n",
+      "719 779\n",
+      "{'719719'}\n",
+      "----- 483556 - 641804\n",
+      "4 6\n",
+      "set()\n",
+      "48 64\n",
+      "{'484848'}\n",
+      "483 641\n",
+      "{'641641'}\n",
+      "----- 265244 - 450847\n",
+      "2 4\n",
+      "{'444444'}\n",
+      "26 45\n",
+      "set()\n",
+      "265 450\n",
+      "{'450450', '265265'}\n",
+      "----- 210541 - 230207\n",
+      "2 2\n",
+      "{'222222'}\n",
+      "21 23\n",
+      "{'212121'}\n",
+      "210 230\n",
+      "set()\n",
+      "----- 195 - 275\n",
+      "1 2\n",
+      "{'222'}\n",
+      "----- 75702340 - 75883143\n",
+      "7 7\n",
+      "set()\n",
+      "75 75\n",
+      "{'75757575'}\n",
+      "757 758\n",
+      "set()\n",
+      "7570 7588\n",
+      "{'75707570'}\n",
+      "----- 58 - 84\n",
+      "5 8\n",
+      "set()\n",
+      "----- 2152 - 3237\n",
+      "2 3\n",
+      "{'2222'}\n",
+      "21 32\n",
+      "{'3232'}\n",
+      "----- 3367 - 5895\n",
+      "3 5\n",
+      "{'5555'}\n",
+      "33 58\n",
+      "{'5858'}\n",
+      "----- 1552 - 2029\n",
+      "1 2\n",
+      "set()\n",
+      "15 20\n",
+      "{'2020'}\n",
+      "----- 9575 - 13844\n",
+      "9 1\n",
+      "{'9999', '11111'}\n",
+      "95 13\n",
+      "{'9595'}\n",
+      "----- 6048 - 8966\n",
+      "6 8\n",
+      "{'6666', '8888'}\n",
+      "60 89\n",
+      "{'6060'}\n",
+      "----- 419388311 - 419470147\n",
+      "4 4\n",
+      "set()\n",
+      "41 41\n",
+      "set()\n",
+      "419 419\n",
+      "{'419419419'}\n",
+      "4193 4194\n",
+      "set()\n",
+      "----- 936 - 1409\n",
+      "9 1\n",
+      "{'999', '1111'}\n",
+      "93 14\n",
+      "set()\n",
+      "----- 9292901468 - 9292987321\n",
+      "9 9\n",
+      "set()\n",
+      "92 92\n",
+      "{'9292929292'}\n",
+      "929 929\n",
+      "set()\n",
+      "9292 9292\n",
+      "set()\n",
+      "92929 92929\n",
+      "set()\n"
+     ]
+    }
+   ],
+   "source": [
+    "invalid_ids = set()\n",
+    "for line in data:\n",
+    "    left, right = line.split(\"-\")\n",
+    "    print(f\"----- {left} - {right}\")\n",
+    "    for rep_len in range(1, max(len(left), len(right)) // 2 + 1):\n",
+    "        print(left[:rep_len], right[:rep_len])\n",
+    "        invalid_left = try_repeat(left[:rep_len], left, right)\n",
+    "        invalid_right = try_repeat(right[:rep_len], left, right)\n",
+    "        invalid_ids.update(invalid_left)\n",
+    "        invalid_ids.update(invalid_right)\n",
+    "        print(invalid_left | invalid_right)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
    "id": "d49f09c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['78847-119454',\n",
-       " '636-933',\n",
-       " '7143759788-7143793713',\n",
-       " '9960235-10043487',\n",
-       " '44480-68595',\n",
-       " '23468-43311',\n",
-       " '89-123',\n",
-       " '785189-1014654',\n",
-       " '3829443354-3829647366',\n",
-       " '647009-692765',\n",
-       " '2-20',\n",
-       " '30-42',\n",
-       " '120909-197026',\n",
-       " '5477469-5677783',\n",
-       " '9191900808-9191943802',\n",
-       " '1045643-1169377',\n",
-       " '46347154-46441299',\n",
-       " '2349460-2379599',\n",
-       " '719196-779497',\n",
-       " '483556-641804',\n",
-       " '265244-450847',\n",
-       " '210541-230207',\n",
-       " '195-275',\n",
-       " '75702340-75883143',\n",
-       " '58-84',\n",
-       " '2152-3237',\n",
-       " '3367-5895',\n",
-       " '1552-2029',\n",
-       " '9575-13844',\n",
-       " '6048-8966',\n",
-       " '419388311-419470147',\n",
-       " '936-1409',\n",
-       " '9292901468-9292987321']"
+       "4174379265"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l = \"9191900808\"\n",
-    "r = \"9191943802\""
+    "sum([int(i) for i in invalid_ids])"
    ]
   },
   {
@@ -177,7 +418,10 @@
    "id": "7615bcbf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# wrong\n",
+    "# 30064333981"
+   ]
   }
  ],
  "metadata": {
